Adicionanddo modo Orange no Relogio Digital

--- a/assets/index.html
+++ b/assets/index.html
@@ -13,6 +13,12 @@
 
 <body>
 
+    <div class="checkbox">
+        <label for="switch">
+            <input type="checkbox" id="switch"> Orange Mode
+        </label>
+    </div>
+
     <div class="container">
         <div class="relogio">
             <div>
