Alteração de estilização de modo Orange

--- a/assets/index.html
+++ b/assets/index.html
@@ -15,7 +15,7 @@
 
     <div class="checkbox">
         <label for="switch">
-            <input type="checkbox" id="switch"> Orange Mode
+            <input type="checkbox" id="switch" checked = "checked"> Blue Mode
         </label>
     </div>
 
